ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "myapp.com"
    http:
      paths:
      - pathType: Prefix
        path: /app
        backend:
          service:
            name: app-v1
            port:
              number: 8080 
  - http:
      paths:
      - path: /appv1
        pathType: Prefix
        backend:
          service:
            name: app-v1
            port:
              number: 8080
